# bookish-octo-funicular

./: .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml  test_cal1.ics  test_cal2.ics  test_cal3_repeat_weekly.ics  test_cal4_repeat_weekly_20times_2exceptions.ics  test_main.py
tests/: test_main.py
