[tool.poetry]
name = "bookish-octo-funicular"
version = "0.1.0"
description = "Convert calendars into a schedule."
authors = ["Mark Ferlatte <mark@ferlatte.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
icalendar = "^5.0.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
