[tool.mypy]
strict = true
# pre-commit sets these to true for mypy.
# For now, at least make them the same.
ignore_missing_imports = true
scripts_are_modules = true

[tool.poetry]
name = "bookish-octo-funicular"
version = "0.1.0"
description = "Convert calendars into a schedule."
authors = ["Mark Ferlatte <mark@ferlatte.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
icalendar = "^5.0.11"
requests = "^2.32.0"
flask = "^3.0.3"


[tool.poetry.group.dev.dependencies]
mypy = "^1.7.0"
types-requests = "^2.31.0.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
